# github-archive-attachments-analyzer

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
fixtures/multiple-files/: attachments_000001.json  attachments_000002.json
src/: main.rs
