[package]
name = "gaaa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "5.1.4"
exitcode = "1.1.2"
glob = "0.3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.128"
